# query-ease

./: .env.example  .gitignore  ANALYSIS_REPORT.md  LICENSE  README.md  descriptions.json  main.py  pyproject.toml  requirements.txt  sample_data.sql
assets/: demo.cast
src/queryease/: cli.py  config.py  executor.py  formatter.py  generator.py  history.py  judge.py  schema.py  validator.py
src/queryease/db/: __init__.py  base.py  mysql.py  postgres.py  sqlite.py
tests/: conftest.py  test_config.py  test_db.py  test_generator.py  test_schema.py  test_validator.py
