[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "queryease"
version = "0.1.0"
description = "Query any SQL database in plain English using LLMs"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["sql", "llm", "natural-language", "database", "groq", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "groq>=0.9.0",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.0",
    "sqlparse>=0.5.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
queryease = "queryease.cli:main"

[project.urls]
Homepage = "https://github.com/bhavyashah09/QueryEase"
Repository = "https://github.com/bhavyashah09/QueryEase"
Issues = "https://github.com/bhavyashah09/QueryEase/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
